# giskard-lmutils

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  create-release.yml
src/giskard_lmutils/: __init__.py
src/giskard_lmutils/clustering/: __init__.py  find_topic.py
src/giskard_lmutils/model/: __init__.py  litellm.py
tests/data/: embedding.py
tests/test_clustering/: test_find_topic.py
tests/test_model/: test_litellm.py
