[project]
name = "giskard-lmutils"
version = "0.1.0"
description = "Giskard LLM Utils"
authors = [
    { name = "Kevin Messiaen", email = "kevin@giskard.ai" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/giskard_lmutils"]
