[project]
name = "giskard-lmutils"
version = "0.1.0"
description = "Giskard LLM Utils"
authors = [
    { name = "Kevin Messiaen", email = "kevin@giskard.ai" }
]
dependencies = [
    "numpy>=2.2.2",
    "litellm>=1.59.3",
]
readme = "README.md"
requires-python = ">= 3.9, <3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/giskard_lmutils"]
