[project]
name = "giskard-lmutils"
version = "0.1.0"
description = "Giskard LLM Utils"
authors = [
    { name = "Kevin Messiaen", email = "kevin@giskard.ai" }
]
license = { text = "Apache Software License 2.0" }
dependencies = [
    "numpy>=2.2.2",
    "litellm>=1.59.3",
]
readme = "README.md"
requires-python = ">= 3.9, <3.14"

[project.optional-dependencies]
local-embedding = [
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.2",
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.11.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/giskard_lmutils"]
